--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.1",
     "dayjs": "^1.11.1",
+    "mdb-react-ui-kit": "^3.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
