--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-rating-emoji": "^1.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
     "recharts": "^2.1.9",
     "victory-pie": "^36.3.2",
     "web-vitals": "^2.1.4"
