--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mess",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8085",
   "dependencies": {
     "@devexpress/dx-react-chart-material-ui": "^3.0.2",
     "@material-ui/core": "^4.12.4",
@@ -21,6 +22,7 @@
     "react-rating-emoji": "^1.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
     "recharts": "^2.1.9",
     "victory-pie": "^36.3.2",
