--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.1",
     "dayjs": "^1.11.1",
+    "downloadjs": "^1.4.7",
     "mdb-react-ui-kit": "^3.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
